--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,45 +7,46 @@
   padding: 20px;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  text-align: center;
+h1 {
+  display:inline-block;
+}
+
+h2, h3, h4, h5, h6 {
+  text-align: left;
+  
 }
 
 table {
   border-collapse: collapse;
-  margin: 20px 10px;
 }
 
-th {
-  padding: 12px 0px;
-  color: white;
-  background-color: #2c22b9;
-}
 td, th {
-  border: 1px solid black;
   padding: 10px;
+  width:  100px;
+  text-align: left;
 }
 
-tr:nth-child(even) {
+/*tr:nth-child(even) {
   background-color: #cfcfcf;
-}
+}*/
 
-tr:hover {
+/*tr:hover {
   background-color: #8a8a8a;
-}
+}*/
 
-input, select {
-  width: 100%;
+select {
+  width: 30%;
   padding: 12px 20px;
   margin: 8px 0px;
-  display: inline-block;
+  display: inline;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
-button {
-  margin: 0px 10px;
+.otherButtons {
+  margin-top: 15px;
+  margin-right: 5px;
   padding: 5px 20px;
   border: none;
   border-radius: 4px;
@@ -53,12 +54,28 @@ button {
   color: white;
   background-color: blue;
 }
+input {
+  width: 75%;
+}
+.inputAlign {
+  width: 40%;
+  display: inline-block;
+  margin-right: 40px;
+}
+.linkClass {
+  text-align: right;  
+  display: inline-block;
+  margin-left: 470px;
+  
+}
 .error-text {
   color: red;
 }
 .deleteBtn {
-  color: black;
+  color: white;
   background-color: red;
+  display: inline-block;
+  margin-left: 470px;
 }
 
 /* to help troubleshoot, I created this class so I can easily add and remove it */
